Fixed scrollbar jankiness on windows browsers

--- a/src/App.scss
+++ b/src/App.scss
@@ -41,7 +41,6 @@
   text-align: center;
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
 }
 
 .title {
