--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,10 @@ body, root {
   height: 100%;
   width: 100%;
   overflow-x: hidden;
-  overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 0;
 }
 
 hr {
